removed debug output statements Removed unnecessary methods and parameters, per reviewer Misc. clean-ups